--- a/2Y_health.html
+++ b/2Y_health.html
@@ -348,7 +348,7 @@
   <div class="content">
     <div class="life-firstScreen"></div>
     <div class="life-health">
-       <h2>精彩养生</h2>
+       <h1>精彩养生</h1>
        <div class="life-healthnav">
          <a href="#"></a>
          <a href="#"></a>
@@ -370,7 +370,7 @@
        </div>
     </div>
     <div class="life-hair">
-       <h2>精彩美容</h2>
+       <h1>精彩美容</h1>
        <div class="life-healthnav">
          <a href="#"></a>
          <a href="#"></a>
@@ -381,18 +381,159 @@
          <li class="bor1"><a href="#"><img src="images/hair-1.jpg" width="209" height="382" alt=""/></a></li>
          <li class="bor2"><a href="#"><img src="images/hair-2.jpg" width="526" height="382" alt=""/></a></li>
          <li class="bor3">
-            <a class="bor4" href="#"><img src="images/hair-3.jpg" width="209" height="245" alt=""/></a>
-            <a class="bor5" href="#"><img src="images/hair-4.jpg" width="209" height="125" alt=""/></a>
-            <a class="bor6" href="#"><img src="images/hair-5.jpg" width="209" height="109" alt=""/></a>
-            <a class="bor7" href="#"><img src="images/hair-6.jpg" width="209" height="261" alt=""/></a>
+            <div class="bor4">
+               <a class="bor41" href="#"><img src="images/hair-3.jpg" width="209" height="245" alt=""/></a>
+               <a class="bor42" href="#"><img src="images/hair-4.jpg" width="209" height="125" alt=""/></a>
+            </div>
+            <div class="bor5">
+               <a class="bor51" href="#"><img src="images/hair-5.jpg" width="210" height="109" alt=""/></a>
+               <a class="bor52" href="#"><img src="images/hair-6.jpg" width="210" height="261" alt=""/></a>
+            </div>
          </li>
        </ul>
     </div>
     <div class="life-haird">
+       <h1>精彩美发</h1>
+       <div class="life-healthnav">
+         <a href="#"></a>
+         <a href="#"></a>
+         <a href="#"></a>
+         <a href="#"></a>
+       </div>
+       <ul class="haird">
+         <li class="bord1"><a href="#"><img src="images/haird-1.jpg" width="209" height="383" alt=""/></a></li>
+         <li class="bord2"><a href="#"><img src="images/haird-2.jpg" width="526" height="382" alt=""/></a></li>
+         <li class="bord3">
+            <div class="bord4">
+               <a class="bord41" href="#"><img src="images/haird-3.jpg" width="209" height="245" alt=""/></a>
+               <a class="bord42" href="#"><img src="images/haird-4.jpg" width="209" height="125" alt=""/></a>
+            </div>
+            <div class="bord5">
+               <a class="bord51" href="#"><img src="images/haird-5.jpg" width="210" height="245" alt=""/></a>
+               <a class="bord52" href="#"><img src="images/haird-6.jpg" width="210" height="125" alt=""/></a>
+            </div>
+         </li>
+       </ul>
     </div>
     <div class="life-skin">
+       <h1>精彩护肤</h1>
+       <div class="life-healthnav">
+         <a href="#"></a>
+         <a href="#"></a>
+         <a href="#"></a>
+         <a href="#"></a>
+       </div>
+       <ul class="skin">
+         <li class="bork1"><a href="#"><img src="images/skin-1.jpg" width="209" height="383" alt=""/></a></li>
+         <li class="bork2">
+            <a class="sk21" href="#"><img src="images/skin-2.jpg" width="357" height="257" alt=""/></a>
+            <a class="sk22" href="#"><img src="images/skin-3.jpg" width="178" height="125" alt=""/></a>
+            <a class="sk23" href="#"><img src="images/skin-4.jpg" width="178" height="125" alt=""/></a>
+         </li>
+         <li class="bork30">
+            <a class="sk31" href="#"><img src="images/skin-5.jpg" width="189" height="191" alt=""/></a>
+            <a class="sk32" href="#"><img src="images/skin-6.jpg" width="189" height="191" alt=""/></a>
+         </li>
+         <li class="bork3">
+            <div class="bork4">
+               <a class="bork41" href="#"><img src="images/skin-7.jpg" width="190" height="181" alt=""/></a>
+               <a class="bork42" href="#"><img src="images/skin-8.jpg" width="190" height="190" alt=""/></a>
+            </div>
+            <div class="bork5">
+               <a class="bork51" href="#"><img src="images/skin-9.jpg" width="210" height="371" alt=""/></a>
+            </div>
+         </li>
+       </ul>
     </div>
     <div class="life-healthpro">
+       <h1>保健品</h1>
+       <div class="life-healthnav">
+         <a href="#"></a>
+         <a href="#"></a>
+         <a href="#"></a>
+         <a href="#"></a>
+       </div>
+       <div class="heproL">
+         <div class="heproL1">
+           <a href="#"><img src="images/healthpro-1.jpg" width="231" height="294" alt=""/></a>
+           <a href="#"><img src="images/healthpro-2.jpg" width="461" height="295" alt=""/></a>
+           <a href="#"><img src="images/healthpro-3.jpg" width="226" height="294" alt=""/></a>
+         </div>
+         <div class="heproL2">
+           <a href="#"><img src="images/healthpro-4.jpg" width="231" height="195" alt=""/></a>
+           <a href="#"><img src="images/healthpro-5.jpg" width="230" height="195" alt=""/></a>
+           <a href="#"><img src="images/healthpro-6.jpg" width="230" height="195" alt=""/></a>  
+           <a href="#"><img src="images/healthpro-7.jpg" width="226" height="195" alt=""/></a>         
+         </div>
+         <div class="heproL3"></div>
+       </div>
+       <div class="heproR">
+         <div class="heproR1">
+           <h2>健康风向标</h2>
+           <ul class="hepro">
+             <li class="life-index-0">
+               <a href="#">
+                 <em class="life-icon-index"></em>
+                 <img src="images/hepro-5.jpg" width="60" height="63" alt=""/>
+                 <h3>Ocean Spray Craisins 美国原装进口</h3>
+                 <p>
+                   <label class="life-price">
+                     <b>￥</b>
+                     <span>85.00</span>
+                   </label>
+                 </p>
+                 <p>3天销量：<b>491</b>笔</p>
+               </a>
+             </li>
+             <li class="life-index-1">
+               <a href="#">
+                 <em class="life-icon-index"></em>
+                 <img src="images/hepro-6.jpg" width="60" height="63" alt=""/>
+                 <h3>Ocean Spray Craisins 美国原装进口</h3>
+                 <p>
+                   <label class="life-price">
+                     <b>￥</b>
+                     <span>85.00</span>
+                   </label>
+                 </p>
+                 <p>3天销量：<b>491</b>笔</p>
+               </a>
+             </li>
+             <li class="life-index-2">
+               <a href="#">
+                 <em class="life-icon-index"></em>
+                 <img src="images/hepro-7.jpg" width="60" height="63" alt=""/>
+                 <h3>Ocean Spray Craisins 美国原装进口</h3>
+                 <p>
+                   <label class="life-price">
+                     <b>￥</b>
+                     <span>85.00</span>
+                   </label>
+                 </p>
+                 <p>3天销量：<b>491</b>笔</p>
+               </a>
+             </li>
+           </ul>
+         </div>
+         <div class="heproR2">
+           <h2>精彩推荐</h2>
+           <div class="heproR21">
+             <img src="images/hepro-1.jpg" width="57" height="57" alt=""/>
+             <p>美国产康宝来奶昔套餐减肥代餐粉</p>
+             <p>
+               <label class="life-price">
+                  <b>￥</b>
+                  <span>85.00</span>
+               </label>
+             </p>
+           </div>
+           <div class="heproR22">
+             <a href="#"><img src="images/hepro-2.jpg" width="58" height="58"></a>
+             <a href="#"><img src="images/hepro-3.jpg" width="58" height="58"></a>
+             <a href="#"><img src="images/hepro-4.jpg" width="58" height="58"></a>
+           </div>
+         </div>
+       </div>
     </div>
   </div>
 </div>
@@ -443,7 +584,7 @@
           <dd><a href="#">延保服务</a></dd>
         </dl>
         <dl class="life-mobile">
-          <dd><a href="#"><img src="images/Code.png" alt="扫一扫关注我们"/></a></dd>
+          <dd><a href="#"><img src="images/Code.jpg" alt="扫一扫关注我们"/></a></dd>
         </dl>
       </div>
     </div>
