--- a/footer.html
+++ b/footer.html
@@ -53,7 +53,7 @@
           <dd><a href="#">延保服务</a></dd>
         </dl>
         <dl class="life-mobile">
-          <dd><a href="#"><img src="images/Code.png" alt="扫一扫关注我们"/></a></dd>
+          <dd><a href="#"><img src="images/Code.jpg" alt="扫一扫关注我们"/></a></dd>
         </dl>
       </div>
     </div>
