--- a/2-tuij.html
+++ b/2-tuij.html
@@ -858,21 +858,21 @@
 				<div class="lb_tuijh2">
 					<ul>
 						<li>
-							<table cellpadding="0" cellspacing="0" >
-						<tr>
-							<td>
-								<div class="lb_tuijh3">5</div>
-							</td>
-							<td>
-								<table>
-									<tr><td><div class="lb_tuijh4">￥</div></td></tr>
-									<tr><td><div class="lb_tuijh4">店铺红包</div></td></tr>
-									<tr><td>&nbsp;</td></tr>
+							<div class="lb_tuijh3">5</div>
+							<div class="">
+								<table cellpadding="0" cellspacing="0" >
+									<tr>
+										<td>
+											<table>
+												<tr><td><div class="lb_tuijh4">￥</div></td></tr>
+												<tr><td><div class="lb_tuijh4">店铺红包</div></td></tr>
+												<tr><td>&nbsp;</td></tr>
 									
+											</table>
+										</td>
+									</tr>
 								</table>
-							</td>
-						</tr>
-					</table>
+							</div>
 						</li>
 						<li><div class="lb_tuijh5">5元无限额使用</div></li>
 					</ul>
