--- a/2-tuij.html
+++ b/2-tuij.html
@@ -859,7 +859,7 @@
 					<ul>
 						<li>
 							<div class="lb_tuijh3">5</div>
-							<div class="">
+							<div class="lb_tuijh6">
 								<table cellpadding="0" cellspacing="0" >
 									<tr>
 										<td>
