--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+
+
+
 <!--------------------------导航部分-------------------------->
 <div id="site-nav">
   <div class="life-top"></div>
@@ -61,7 +64,7 @@
     <ul class="fr lh" id="fright">
      <li class="greet" id="loginbar">亲，欢迎来精彩生活馆！<span><a href="#" target="_top">[请登录]</a><a href="#" target="_top">[免费注册]</a></span></li>
      <li class="jl1">|</li>
-     <li class="myaccount ld">
+     <li class="myaccount ld" style="border:1px solid #666; z-index:105;">
         <span class="jl2"><img src="images/header3.png"/></span>
         <div style="float:left;">
           <a class="menu-hd" href="#" target="_top" rel="nofollow" tabindex="0">我的账户</a>
