--- a/2_health.html
+++ b/2_health.html
@@ -13,7 +13,7 @@
 <link href="css/layout.css" rel="stylesheet" type="text/css">
 <link href="css/Nav.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="css/jcshgsy.css" />
-<link rel="stylesheet" type="text/css" href="css/health.css" />
+<link rel="stylesheet" type="text/css" href="css/2_health.css" />
 <script type="text/javascript" src="js/jq1.7.1.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 <script src="js/jquery-powerSwitch.js"></script>
@@ -207,53 +207,124 @@
     <div class="J_Layout layout grid-m">
       <div class="col-main">
         <div class="main-wrap J_Region">
+          <!-----------------------part1--------------------------->
           <div class="J_Module skin-default">
             <div class="module">
             </div>
           </div>
+          <!-----------------------part2--------------------------->
           <div class="J_Module skin-default">
             <div class="module">
               <div class="tb-module tm-hqsg-2015">
                 <div class="tm-wrap">
                   <h1>精彩养生</h1>
-                  <div class="life-healthnav">
+                  <div class="life-title">
                     <a href="#">专家预约&nbsp;&nbsp;/</a>
                     <a href="#">养生指南&nbsp;&nbsp;/</a>
                     <a href="#">活动专区&nbsp;&nbsp;/</a>
-                    <a href="#">精彩养生&nbsp;&nbsp&nbsp;&nbsp;</a>
+                    <a href="#">精彩养生&nbsp;&nbsp;/</a>
                   </div>
-                  <div class="health">
-                    <a class="hleft" href="#"><img src="images/health1-1.jpg" width="279" height="219" alt=""/></a>
-                    <ul class="hright">
-                      <li><a href="#"><img src="images/health1-2.jpg" width="210" height="95" alt=""/></a></li>
-                      <li><a href="#"><img src="images/health1-3.jpg" width="210" height="95" alt=""/></a></li>
-                      <li><a href="#"><img src="images/health1-4.jpg" width="210" height="95" alt=""/></a></li>
-                      <li><a href="#"><img src="images/health1-5.jpg" width="210" height="95" alt=""/></a></li>
-                      <li><a href="#"><img src="images/health1-6.jpg" width="210" height="95" alt=""/></a></li>
-                      <li><a href="#"><img src="images/health1-7.jpg" width="210" height="95" alt=""/></a></li>
-                      <li><a href="#"><img src="images/health1-8.jpg" width="210" height="95" alt=""/></a></li>
-                      <li><a href="#"><img src="images/health1-9.jpg" width="210" height="95" alt=""/></a></li>
-                    </ul>
+                  <div class="life-category-content">
+                    <div class="life-cover">
+                      <a href="#"><img src="images/health1-1.jpg" width="279" height="219" alt=""/></a>
+                    </div>
+                    <div class="life-items">
+                      <div class="life-items-box">
+                        <a class="life-item" href="#">
+                          <div class="life-shop-info">
+                            <img src="images/health1-2.jpg" width="210" height="95" alt=""/>
+                          </div>
+                          <div class="life-shop-desc" style="background-color:#fcfbec;">
+                            <strong style="color:#9d790c">汤臣倍健</strong>
+                            <p style="color:#9d790c">最好的养生</p>
+                          </div>
+                        </a>
+                        <a class="life-item" href="#">
+                          <div class="life-shop-info">
+                            <img src="images/health1-3.jpg" width="210" height="95" alt=""/>
+                          </div>
+                          <div class="life-shop-desc" style="background-color:#fcfbec;">
+                            <strong style="color:#9d790c">汤臣倍健</strong>
+                            <p style="color:#9d790c">最好的养生</p>
+                          </div>
+                        </a>
+                        <a class="life-item" href="#">
+                          <div class="life-shop-info">
+                            <img src="images/health1-4.jpg" width="210" height="95" alt=""/>
+                          </div>
+                          <div class="life-shop-desc" style="background-color:#fcfbec;">
+                            <strong style="color:#9d790c">汤臣倍健</strong>
+                            <p style="color:#9d790c">最好的养生</p>
+                          </div>
+                        </a>
+                        <a class="life-item" href="#">
+                          <div class="life-shop-info">
+                            <img src="images/health1-5.jpg" width="210" height="95" alt=""/>
+                          </div>
+                          <div class="life-shop-desc" style="background-color:#fcfbec;">
+                            <strong style="color:#9d790c">汤臣倍健</strong>
+                            <p style="color:#9d790c">最好的养生</p>
+                          </div>
+                        </a>
+                        <a class="life-item" href="#">
+                          <div class="life-shop-info">
+                            <img src="images/health1-6.jpg" width="210" height="95" alt=""/>
+                          </div>
+                          <div class="life-shop-desc" style="background-color:#fcfbec;">
+                            <strong style="color:#9d790c">汤臣倍健</strong>
+                            <p style="color:#9d790c">最好的养生</p>
+                          </div>
+                        </a>
+                        <a class="life-item" href="#">
+                          <div class="life-shop-info">
+                            <img src="images/health1-7.jpg" width="210" height="95" alt=""/>
+                          </div>
+                          <div class="life-shop-desc" style="background-color:#fcfbec;">
+                            <strong style="color:#9d790c">汤臣倍健</strong>
+                            <p style="color:#9d790c">最好的养生</p>
+                          </div>
+                        </a>
+                        <a class="life-item" href="#">
+                          <div class="life-shop-info">
+                            <img src="images/health1-8.jpg" width="210" height="95" alt=""/>
+                          </div>
+                          <div class="life-shop-desc" style="background-color:#fcfbec;">
+                            <strong style="color:#9d790c">汤臣倍健</strong>
+                            <p style="color:#9d790c">最好的养生</p>
+                          </div>
+                        </a>
+                        <a class="life-item" href="#">
+                          <div class="life-shop-info">
+                            <img src="images/health1-9.jpg" width="210" height="95" alt=""/>
+                          </div>
+                          <div class="life-shop-desc" style="background-color:#fcfbec;">
+                            <strong style="color:#9d790c">汤臣倍健</strong>
+                            <p style="color:#9d790c">最好的养生</p>
+                          </div>
+                        </a>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+          <!-----------------------part3--------------------------->
           <div class="J_Module skin-default">
             <div class="module">
               <div class="tb-module tm-hqsg-2015">
                 <div class="tm-wrap">
                   <h1>精彩美容</h1>
-                    <div class="life-healthnav">
-                      <a href="#">专家预约&nbsp;&nbsp;/</a>
-                      <a href="#">养生指南&nbsp;&nbsp;/</a>
-                      <a href="#">活动专区&nbsp;&nbsp;/</a>
-                      <a href="#">精彩养生&nbsp;&nbsp&nbsp;&nbsp;</a>
-                    </div>
-                    <ul class="hair">
-                      <li class="bor1"><a href="#"><img src="images/hair-1.jpg" width="209" height="382" alt=""/></a></li>
-                      <li class="bor2"><a href="#"><img src="images/hair-2.jpg" width="526" height="382" alt=""/></a></li>
-                      <li class="bor3">
+                  <div class="life-title">
+                    <a href="#">专家预约&nbsp;&nbsp;/</a>
+                    <a href="#">养生指南&nbsp;&nbsp;/</a>
+                    <a href="#">活动专区&nbsp;&nbsp;/</a>
+                    <a href="#">精彩养生&nbsp;&nbsp;/</a>
+                  </div>
+                    <div class="life-category-content">
+                      <div class="bor1"><a href="#"><img src="images/hair-1.jpg" width="209" height="382" alt=""/></a></div>
+                      <div class="bor2"><a href="#"><img src="images/hair-2.jpg" width="526" height="382" alt=""/></a></div>
+                      <div class="bor3">
                         <div class="bor4">
                           <a class="bor41" href="#"><img src="images/hair-3.jpg" width="209" height="245" alt=""/></a>
                           <a class="bor42" href="#"><img src="images/hair-4.jpg" width="209" height="125" alt=""/></a>
@@ -263,7 +334,7 @@
                           <a class="bor52" href="#"><img src="images/hair-6.jpg" width="210" height="261" alt=""/></a>
                         </div>
                       </li>
-                    </ul>
+                    </div>
                 </div>
               </div>
             </div>
@@ -273,7 +344,7 @@
               <div class="tb-module tm-hqsg-2015">
                 <div class="tm-wrap">
                   <h1>精彩美发</h1>
-                  <div class="life-healthnav">
+                  <div class="life-title">
                     <a href="#">专家预约&nbsp;&nbsp;/</a>
                     <a href="#">养生指南&nbsp;&nbsp;/</a>
                     <a href="#">活动专区&nbsp;&nbsp;/</a>
@@ -351,7 +422,7 @@
               <div class="tb-module tm-hqsg-2015">
                 <div class="tm-wrap">
                   <h1>精彩护肤</h1>
-                  <div class="life-healthnav">
+                  <div class="life-title">
                     <a href="#">专家预约&nbsp;&nbsp;/</a>
                     <a href="#">养生指南&nbsp;&nbsp;/</a>
                     <a href="#">活动专区&nbsp;&nbsp;/</a>
@@ -412,7 +483,7 @@
               <div class="tb-module tm-hqsg-2015">
                 <div class="tm-wrap">
                   <h1>保健品</h1>
-                  <div class="life-healthnav">
+                  <div class="life-title">
                     <a href="#">专家预约&nbsp;&nbsp;/</a>
                     <a href="#">养生指南&nbsp;&nbsp;/</a>
                     <a href="#">活动专区&nbsp;&nbsp;/</a>
