--- a/2_help.html
+++ b/2_help.html
@@ -13,7 +13,7 @@
 <link href="css/layout.css" rel="stylesheet" type="text/css">
 <link href="css/Nav.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="css/jcshgsy.css" />
-<link rel="stylesheet" type="text/css" href="css/2Y_help.css" />
+<link rel="stylesheet" type="text/css" href="css/2_help.css" />
 <script type="text/javascript" src="js/jq1.7.1.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 <script src="js/jquery-powerSwitch.js"></script>
