--- a/2_tea.html
+++ b/2_tea.html
@@ -12,16 +12,32 @@
 <script type="text/javascript" src="js/2_tea.js"></script>
 </head>
 <body>
-<!--------------------------全部商品分类----------------------->
+<!--------全部商品分类代码开始----------->
 <div class="tea1_div">
  <div class="tea1_div1">
-  <dl>
+  <dl id="tea1a">
    <dt>
     <span>全部商品分类</span>
     <span>▼</span>
    </dt>
   </dl>
+  <dl id="tea1b">
+   <a href="#"><dt>精彩推荐专区</dt></a>
+   <a href="#"><dt>产地直送</dt></a>
+   <a href="#"><dt>美食馆</dt></a>
+   <a href="#"><dt>服装城</dt></a>
+   <a href="#"><dt>养生馆</dt></a>
+   <a href="#"><dt>精彩回购</dt></a>
+  </dl>
+  <dl id="tea1c">
+   <a href="#">
+    <dt><img src="images/tea1.gif"/></dt>
+    <dt><i>手机下单</i></dt>
+    <dt><i>更精彩</i></dt>
+   </a>
+  </dl>
  </div>
 </div>
+<!--------全部商品分类代码结束----------->
 </body>
 </html>
