--- a/index.html
+++ b/index.html
@@ -19,38 +19,37 @@
 <div class="header2">
  <div class="header2a">
   <dl id="h1">
-   <dt><img src="images/header1.png"/></dt>
-   <dt>收藏精彩生活馆</dt>
+   <dt id="hxuan1"><b><img src="images/header1.png"/></b></dt>
+   <a href="#"><dt>收藏精彩生活馆</dt></a>
    <dt><img src="images/header2.png"/></dt>
-   <dt>成都市</dt>
+   <a href="#"><dt>成都市</dt></a>
    <dt>＞</dt>
-   <dt>金牛区</dt>
+   <a href="#"><dt>金牛区</dt></a>
    <dt>▼</dt>
   </dl>
   <dl id="h2">
-   <dt>亲，欢迎来精彩生活馆！</dt>
-   <dt>[请登录]</dt>
-   <dt>[免费注册]</dt>
+   <a href="#"><dt>亲，欢迎来精彩生活馆！</dt></a>
+   <a href="#"><dt>[请登录]</dt></a>
+   <a href="#"><dt>[免费注册]</dt></a>
    <dt>|</dt>
    <dt><img src="images/header3.png"/></dt>
-   <dt>我的账户</dt>
+   <a href="#"><dt>我的账户</dt></a>
    <dt>▼</dt>
    <dt><img src="images/header4.png"/></dt>
-   <dt>购物车</dt>
-   <dt>0</dt>
-   <dt>件</dt>
+   <a href="#"><dt>购物车</dt></a>
+   <a href="#"><dt>0</dt></a>
+   <a href="#"><dt>件</dt></a>
    <dt>|</dt>
-   <dt>招商加盟</dt>
+   <a href="#"><dt>招商加盟</dt></a>
    <dt>|</dt>
    <dt><img src="images/header5.png"/></dt>
-   <dt>手机版</dt>
+   <a href="#"><dt>手机版</dt></a>
    <dt>|</dt>
-   <dt>网站导航</dt>
+   <a href="#"><dt>网站导航</dt></a>
    <dt>▼</dt>
   </dl>
  </div>
 </div>
-
 <!--------------------------------------------------------------------导航结束------------------------------------------------------------------------------->
 
 
