--- a/2_help.html
+++ b/2_help.html
@@ -10,14 +10,10 @@
 <title>精彩生活网</title>
 <link rel="shortcut icon" href="images/shopping.ico" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="css/index.css" />
-<link href="css/layout.css" rel="stylesheet" type="text/css">
-<link href="css/Nav.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css" href="css/jcshgsy.css" />
+<link rel="stylesheet" type="text/css" href="css/header_footer.css">
 <link rel="stylesheet" type="text/css" href="css/2_help.css" />
 <script type="text/javascript" src="js/jq1.7.1.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
-<script src="js/jquery-powerSwitch.js"></script>
-<script type="text/javascript" src="js/bb.js"></script>
 <script type="text/javascript" src="js/js.js"></script>
 </head>
 
@@ -374,10 +370,10 @@
 <div class="footer">
   <div id="footer">
     <div class="life-ensure">
-      <a href="#"></a>
-      <a href="#"></a>
-      <a href="#"></a>
-      <a href="#"></a>
+      <a href="#">品质保障</a>
+      <a href="#">七天退换</a>
+      <a href="#">特色服务</a>
+      <a href="#">帮助中心</a>
     </div>
 	<div class="life-desc">
       <div class="life-desc1">
