--- a/2_health.html
+++ b/2_health.html
@@ -10,7 +10,7 @@
 <title>精彩生活网</title>
 <link rel="shortcut icon" href="images/shopping.ico" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="css/index.css" />
-<link href="css/layout.css" rel="stylesheet" type="text/css">
+<link href="css/header_footer.css" rel="stylesheet" type="text/css">
 <link href="css/Nav.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="css/jcshgsy.css" />
 <link rel="stylesheet" type="text/css" href="css/2_health.css" />
@@ -23,139 +23,42 @@
 
 <body>
 <!--------------------------导航部分-------------------------->
-<div id="site-nav">
-  <div class="life-top"></div>
-  <div id="life-nav">
-   <div class="sn-container">
-    <ul class="enshrine">
-      <li class="fore1 ld">
-        <b></b>
-        <a href="javascript:addToFavortie()" rel="nofollow">收藏精彩生活馆</a>
-      </li>
-    </ul>
-	<script type="text/javascript">
-	$(document).ready(function(){
-	  $("#home-area").mouseover(function(){
-	  $("#home-area .dd").toggle();
-	  });
-	});
-	</script>
-    <dl id="home-area">
-      <dt>
-        <i></i>
-        <span>成都市&nbsp;&gt;</span>
-        <a href="#">金牛区</a>
-        <b></b>
-        <span class="blank"></span>
-      </dt>
-      <dd class="dd">
-        <ul class="lh">
-          <li><a href="#">锦江区</a></li>
-          <li><a href="#">青羊区</a></li>
-          <li><a href="#">金牛区</a></li>
-          <li><a href="#">武侯区</a></li>
-          <li><a href="#">成华区</a></li>
-          <li><a href="#">龙泉驿区</a></li>
-          <li><a href="#">青白江区</a></li>
-          <li><a href="#">新都区</a></li>
-          <li><a href="#">温江区</a></li>
-          <li><a href="#">金堂县</a></li>
-          <li><a href="#">双流县</a></li>
-          <li><a href="#">郫县</a></li>
-          <li><a href="#">大邑县</a></li>
-          <li><a href="#">蒲江县</a></li>
-          <li><a href="#">新津县</a></li>
-          <li><a href="#">都江堰市</a></li>
-          <li><a href="#">彭州市</a></li>
-          <li><a href="#">邛崃市</a></li>
-          <li><a href="#">崇州市</a></li>
-          <li><a href="#">其他</a></li>
-        </ul>
-        <div class="close" onclick="$('#home-area').removeClass('hover')">×</div>
-      </dd>
-    </dl>
-    <ul class="fr lh" id="fright">
-     <li class="greet" id="loginbar">亲，欢迎来精彩生活馆！<span><a href="#" target="_top">[请登录]</a><a href="#" target="_top">[免费注册]</a></span></li>
-     <li class="myaccount ld">
-       <s></s>
-       <i></i>
-       <a class="menu-hd" href="#" target="_top" rel="nofollow" tabindex="0">我的账户</a>
-       <b></b>
-       <div class="menu-bd-panel" id="mylifePanel">
-          <ul>
-           <li><a href="#" target="_blank">我的订单</a></li>
-           <li><a href="#" target="_blank">我的积分</a></li>
-           <li><a href="#" target="_blank">我的收藏</a></li>
-           <li><a href="#" target="_blank">我的优惠</a></li>
-          </ul>
-       </div>
-	 </li>
-	 <li class="sn-cart mini-cart menu ld">
-       <i></i>
-       <a class="sn-cart-link" href="#" target="_top" rel="nofollow" id="mc-menu-hd">购物车<span class="mc-count mc-pt3">&nbsp;0&nbsp;</span>件</a>
-     </li>
-     <li class="sn-join ld">
-       <s></s>
-       <a href="#">招商加盟</a>
-     </li>
-     <script type="text/javascript">
-	$(document).ready(function(){
-	  $("#app-life").mouseover(function(){
-	  $(".sn-qrcode").toggle();
-	  });
-	  $(".myaccount").click(function(){
-		  $("#mylifePanel li").slideToggle();
-		  });
-	  $(".sn-sitemap").mouseover(function(){
-	  $(".hd_site_nav").toggle();
-	  });
-	});
-	</script>
-	 <li class="sn-mobile ld" id="app-life">
-	   <s></s>
-	   <i class="mui-global-iconfont"></i>
-	   <a href="#" target="_top" class="sn-mobile-link">手机版</a>
-	   <div class="sn-qrcode" style="display:inline;">
-         <div class="sn-qrcode-content"></div>
-         <p>扫一扫，定制我的生活！</p>
-         <b></b>
-       </div>
-	 </li>
-     <li class="sn-sitemap ld">
-       <s></s>
-       <a href="#">网站导航</a>
-       <b></b>
-       <div class="hd_site_nav">
-         <dl class="item fore1">
-           <dt>精彩指南</dt>
-           <dd>
-             <div><a target="_blank" href="#">校园之星</a></div>
-             <div><a target="_blank" href="#">视频购物星</a></div>
-             <div><a target="_blank" href="#">在线读书物</a></div>
-             <div><a target="_blank" href="#">装机大师</a></div>
-             <div><a target="_blank" href="#">家装城</a></div>
-             <div><a target="_blank" href="#">搭配购</a></div>
-           </dd>
-         </dl>
-         <dl class="item fore2">
-           <dt>企业服务</dt>
-           <dd>
-             <div><a target="_blank" href="#">企业采购</a></div>
-             <div><a target="_blank" href="#">办公直通车</a></div>
-           </dd>
-         </dl>
-         <dl class="item fore3">
-           <dt>更多精彩</dt>
-           <dd>
-             <div><a target="_blank" href="#">企业采购</a></div>
-             <div><a target="_blank" href="#">办公直通车</a></div>
-           </dd>
-         </dl>
-       </div>
-     </li>
-    </ul>
-   </div>
-  </div>
+<!------顶部彩色图-------->
+<div class="header1"></div>
+<!------导航第一板块------>
+<div class="header2">
+    <div class="header2a">
+        <dl id="h1">
+            <dt id="hxuan1"><b><img src="images/header1.png"/></b></dt>
+            <a href="#"><dt>收藏精彩生活馆</dt></a>
+            <dt><img src="images/header2.png"/></dt>
+            <a href="#"><dt>成都市</dt></a>
+            <dt>＞</dt>
+            <a href="#"><dt>金牛区</dt></a>
+            <dt>▼</dt>
+        </dl>
+        <dl id="h2">
+            <a href="#"><dt>亲，欢迎来精彩生活馆！</dt></a>
+            <a href="#"><dt>[请登录]</dt></a>
+            <a href="#"><dt>[免费注册]</dt></a>
+            <dt>|</dt>
+            <dt><img src="images/header3.png"/></dt>
+            <a href="#"><dt>我的账户</dt></a>
+            <dt>▼</dt>
+            <dt><img src="images/header4.png"/></dt>
+            <a href="#"><dt>购物车</dt></a>
+            <a href="#"><dt>0</dt></a>
+            <a href="#"><dt>件</dt></a>
+            <dt>|</dt>
+            <a href="#"><dt>招商加盟</dt></a>
+            <dt>|</dt>
+            <dt><img src="images/header5.png"/></dt>
+            <a href="#"><dt>手机版</dt></a>
+            <dt>|</dt>
+            <a href="#"><dt>网站导航</dt></a>
+            <dt>▼</dt>
+        </dl>
+    </div>
 </div>
 
 <!-----------------------------------------------Header------------------------------------------------->
@@ -1402,16 +1305,13 @@
 </div>
 
 <!---------------------------底部代码块---------------------->
-<table cellpadding="0" cellspacing="0" width="100%">
-<tr>
-  <td>
 <div class="footer">
   <div id="footer">
     <div class="life-ensure">
-      <a href="#"></a>
-      <a href="#"></a>
-      <a href="#"></a>
-      <a href="#"></a>
+      <a href="#">品质保障</a>
+      <a href="#">七天退换</a>
+      <a href="#">特色服务</a>
+      <a href="#">帮助中心</a>
     </div>
 	<div class="life-desc">
       <div class="life-desc1">
@@ -1465,8 +1365,5 @@
     </div>
   </div>
 </div>
-  </td>
- </tr>
-</table>
 </body>
 </html>
