--- a/index.html
+++ b/index.html
@@ -13,32 +13,68 @@
 </head>
 <body>
 <!--------------------------------------------------------------------导航开始------------------------------------------------------------------------------->
+
 <!------顶部彩色图-------->
 <div class="header1"></div>
 <!------导航第一板块------>
 <div class="header2">
  <div class="header2a">
+  <div id="hd1">
   <dl id="h1">
-   <dt id="hxuan1"><b><img src="images/header1.png"/></b></dt>
-   <a href="#"><dt>收藏精彩生活馆</dt></a>
-   <dt><img src="images/header2.png"/></dt>
-   <a href="#"><dt>成都市</dt></a>
-   <dt>＞</dt>
-   <a href="#"><dt>金牛区</dt></a>
-   <dt>▼</dt>
+   <dt>
+     <span><img src="images/header1.png"/></span>
+     <span><a href="#">收藏精彩生活馆</a></span>
+   </dt>
   </dl>
   <dl id="h2">
+   <dt>
+    <span><img src="images/header2.png"/></span>
+   </dt>
+   <dt>
+     <span><a href="#">成都市</span></a></span>
+     <span>＞</span>
+     <span><a href="#">金牛区</a></span>
+     <span id="hs1">▼</span>
+   </dt>
+   <dd>
+     <ul>
+       <li>德阳市</li>
+       <li>绵阳市</li>
+       <li>资阳市</li>
+       <li>遂宁市</li>
+       <li>南充市</li>
+       <li>巴中市</li>
+       <li>广汉市</li>
+       <li>广元市</li>
+       <li>自贡市</li>     
+       <li>泸州市</li>
+       <li>内江市</li>
+       <li>乐山市</li>
+       <li>宜宾市</li>
+       <li>广安市</li>
+       <li>达州市</li>
+       <li>雅安市</li>
+       <li>眉山市</li>
+       <li>攀枝花市</li>
+       <li>阿坝州</li>
+       <li>甘孜州</li>
+       <li>凉山州</li>
+     </ul>
+   </dd>
+  </dl>
+ </div>
+
+  <div id="hd2"> 
+  <dl id="h3">
    <a href="#"><dt>亲，欢迎来精彩生活馆！</dt></a>
    <a href="#"><dt>[请登录]</dt></a>
-   <a href="#"><dt>[免费注册]</dt></a>
+   <a href="#"><dt>[免费注册]</dt></a>   
    <dt>|</dt>
    <dt><img src="images/header3.png"/></dt>
    <a href="#"><dt>我的账户</dt></a>
    <dt>▼</dt>
    <dt><img src="images/header4.png"/></dt>
-   <a href="#"><dt>购物车</dt></a>
-   <a href="#"><dt>0</dt></a>
-   <a href="#"><dt>件</dt></a>
+   <a href="#"><dt>购物车 0 件</dt></a>
    <dt>|</dt>
    <a href="#"><dt>招商加盟</dt></a>
    <dt>|</dt>
@@ -48,6 +84,7 @@
    <a href="#"><dt>网站导航</dt></a>
    <dt>▼</dt>
   </dl>
+  </div>
  </div>
 </div>
 <!--------------------------------------------------------------------导航结束------------------------------------------------------------------------------->
