--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 </head>
 <body>
 <!--------------------------------------------------------------------导航开始------------------------------------------------------------------------------->
-
 <!------顶部彩色图-------->
 <div class="header1"></div>
 <!------导航第一板块------>
@@ -38,56 +37,121 @@
    </dt>
    <dd>
      <ul>
-       <li>德阳市</li>
-       <li>绵阳市</li>
-       <li>资阳市</li>
-       <li>遂宁市</li>
-       <li>南充市</li>
-       <li>巴中市</li>
-       <li>广汉市</li>
-       <li>广元市</li>
-       <li>自贡市</li>     
-       <li>泸州市</li>
-       <li>内江市</li>
-       <li>乐山市</li>
-       <li>宜宾市</li>
-       <li>广安市</li>
-       <li>达州市</li>
-       <li>雅安市</li>
-       <li>眉山市</li>
-       <li>攀枝花市</li>
-       <li>阿坝州</li>
-       <li>甘孜州</li>
-       <li>凉山州</li>
+       <li><a href="#" onClick="city(this);">成都市</a></li>
+       <li><a href="#" onClick="city(this);">德阳市</a></li>
+       <li><a href="#" onClick="city(this);">绵阳市</a></li>
+       <li><a href="#" onClick="city(this);">资阳市</a></li>
+       <li><a href="#" onClick="city(this);">遂宁市</a></li>
+       <li><a href="#" onClick="city(this);">南充市</a></li>
+       <li><a href="#" onClick="city(this);">巴中市</a></li>
+       <li><a href="#" onClick="city(this);">广汉市</a></li>
+       <li><a href="#" onClick="city(this);">广元市</a></li>
+       <li><a href="#" onClick="city(this);">自贡市</a></li>   
+       <li><a href="#" onClick="city(this);">泸州市</a></li>
+       <li><a href="#" onClick="city(this);">内江市</a></li>
+       <li><a href="#" onClick="city(this);">乐山市</a></li>
+       <li><a href="#" onClick="city(this);">宜宾市</a></li>
+       <li><a href="#" onClick="city(this);">广安市</a></li>
+       <li><a href="#" onClick="city(this);">达州市</a></li>
+       <li><a href="#" onClick="city(this);">雅安市</a></li>
+       <li><a href="#" onClick="city(this);">眉山市</a></li>
+       <li><a href="#" onClick="city(this);">攀枝花市</a></li>
+       <li><a href="#" onClick="city(this);">阿坝州</a></li>
+       <li><a href="#" onClick="city(this);">甘孜州</a></li>
+       <li><a href="#" onClick="city(this);">凉山州</a></li>
      </ul>
    </dd>
+   <dd>
+     <ul>
+       <li><a href="#" onClick="area(this);">金牛区</a></li>
+       <li><a href="#" onClick="area(this);">成华区</a></li>
+       <li><a href="#" onClick="area(this);">青羊区</a></li>
+       <li><a href="#" onClick="area(this);">武侯区</a></li>
+       <li><a href="#" onClick="area(this);">锦江区</a></li>
+       <li><a href="#" onClick="area(this);">高新区</a></li>
+       <li><a href="#" onClick="area(this);">温江区</a></li>
+       <li><a href="#" onClick="area(this);">新都区</a></li>   
+       <li><a href="#" onClick="area(this);">金堂县</a></li>       
+       <li><a href="#" onClick="area(this);">双流县</a></li>
+       <li><a href="#" onClick="area(this);">浦江县</a></li>
+       <li><a href="#" onClick="area(this);">新津县</a></li>
+       <li><a href="#" onClick="area(this);">大邑县</a></li>
+       <li><a href="#" onClick="area(this);">郫县</a></li>      
+       <li><a href="#" onClick="area(this);">龙泉驿区</a></li>
+       <li><a href="#" onClick="area(this);">青白江区</a></li>
+       <li><a href="#" onClick="area(this);">其他</a></li>
+     </ul>
+   </dd>
+   
   </dl>
  </div>
 
   <div id="hd2"> 
-  <dl id="h3">
-   <a href="#"><dt>亲，欢迎来精彩生活馆！</dt></a>
-   <a href="#"><dt>[请登录]</dt></a>
-   <a href="#"><dt>[免费注册]</dt></a>   
-   <dt>|</dt>
-   <dt><img src="images/header3.png"/></dt>
-   <a href="#"><dt>我的账户</dt></a>
-   <dt>▼</dt>
-   <dt><img src="images/header4.png"/></dt>
-   <a href="#"><dt>购物车 0 件</dt></a>
-   <dt>|</dt>
-   <a href="#"><dt>招商加盟</dt></a>
-   <dt>|</dt>
-   <dt><img src="images/header5.png"/></dt>
-   <a href="#"><dt>手机版</dt></a>
-   <dt>|</dt>
-   <a href="#"><dt>网站导航</dt></a>
-   <dt>▼</dt>
-  </dl>
+   <dl id="h3">
+    <dt>
+     <span><a href="#">亲，欢迎来精彩生活馆！</a></span>
+    </dt>
+   </dl>
+   <dl>
+    <dt>
+     <span><a href="#">[请登录]</a></span>
+     <span><a href="#">[免费注册]</a></span>
+    </dt>
+   </dl> 
+   <dl>  
+   <dt><span>|</span></dt>
+   </dl>
+   <dl id="h4">
+    <dt>
+     <span><img src="images/header3.png"/></span>
+     <span><a href="#">我的账户</a></span>
+     <span>▼</span>
+    </dt>
+    <dd>
+     <ul>
+      <li><a href="#">我的订单</a></li>
+      <li><a href="#">我的积分</a></li>
+      <li><a href="#">我的收藏</a></li>
+      <li><a href="#">我的优惠</a></li>
+     </ul>
+    </dd>
+   </dl>
+   <dl id="h5">
+    <dt>
+     <span><img src="images/header4.png"/></span>
+     <span><a href="#">购物车 0 件</a></span>
+    </dt>
+   </dl>
+   <dl>  
+   <dt><span>|</span></dt>
+   </dl>
+   <dl>
+    <dt>
+     <span><a href="#">招商加盟</a></span>
+    </dt>
+   </dl>  
+   <dl>  
+   <dt><span>|</span></dt>
+   </dl>
+   <dl>
+    <dt>
+     <span><img src="images/header5.png"/></span>
+     <span><a href="#">手机版</a></span>
+    </dt>
+   </dl>
+   <dl>  
+   <dt><span>|</span></dt>
+   </dl>
+   <dl>
+    <dt>
+     <span><a href="#">网站导航</a></span>
+     <span>▼</span>
+    </dt>
+   </dl>
   </div>
  </div>
 </div>
-<!--------------------------------------------------------------------导航结束------------------------------------------------------------------------------->
+<!-----------------------------------------------------------------------导航结束------------------------------------------------------------------------------->
 
 
 
