--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <dt>
      <span><img src="images/header3.png"/></span>
      <span><a href="#">我的账户</a></span>
-     <span>▼</span>
+     <span id='hs2'>▼</span>
     </dt>
     <dd>
      <ul>
@@ -133,7 +133,7 @@
    <dl>  
    <dt><span>|</span></dt>
    </dl>
-   <dl>
+   <dl id='h6'>
     <dt>
      <span><img src="images/header5.png"/></span>
      <span><a href="#">手机版</a></span>
@@ -142,11 +142,40 @@
    <dl>  
    <dt><span>|</span></dt>
    </dl>
-   <dl>
+   <dl id='h7'>
     <dt>
      <span><a href="#">网站导航</a></span>
-     <span>▼</span>
+     <span id='hs3'>▼</span>
     </dt>
+    <div>
+     <dt>精彩指南</dt>
+     <dd>
+       <ul>
+        <li><a href="#">校园之星</a></li>
+        <li><a href="#">视频购物星</a></li>
+        <li><a href="#">在线读书物</a></li>
+        <li><a href="#">装机大师</a></li>
+       </ul>
+     </dd>
+    <dt>精彩指南</dt>
+     <dd>
+       <ul>
+        <li><a href="#">校园之星</a></li>
+        <li><a href="#">视频购物星</a></li>
+        <li><a href="#">在线读书物</a></li>
+        <li><a href="#">装机大师</a></li>
+       </ul>
+     </dd>
+    <dt>精彩指南</dt>
+     <dd>
+       <ul>
+        <li><a href="#">校园之星</a></li>
+        <li><a href="#">视频购物星</a></li>
+        <li><a href="#">在线读书物</a></li>
+        <li><a href="#">装机大师</a></li>
+       </ul>
+     </dd>
+    </div>
    </dl>
   </div>
  </div>
