--- a/index.html
+++ b/index.html
@@ -868,19 +868,14 @@
      
      </div>
     </div>
-
-
-
-
 <!---------------------------底部代码块---------------------->
-
 <div class="footer">
   <div id="footer">
     <div class="life-ensure">
-      <a href="#"></a>
-      <a href="#"></a>
-      <a href="#"></a>
-      <a href="#"></a>
+      <a href="#">品质保障</a>
+      <a href="#">七天退换</a>
+      <a href="#">特色服务</a>
+      <a href="#">帮助中心</a>
     </div>
 	<div class="life-desc">
       <div class="life-desc1">
@@ -934,13 +929,6 @@
     </div>
   </div>
 </div>
-
-
-
-
-
-
-
 
 <script>
 function jia1(a)
