--- a/2_help.html
+++ b/2_help.html
@@ -9,17 +9,16 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>精彩生活网</title>
 <link rel="shortcut icon" href="images/shopping.ico" type="image/x-icon">
-<link rel="stylesheet" type="text/css" href="css/index.css" />
 <link rel="stylesheet" type="text/css" href="css/header_footer.css">
 <link rel="stylesheet" type="text/css" href="css/2_help.css" />
 <script type="text/javascript" src="js/jq1.7.1.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="js/header_footer.js"></script>
 <script type="text/javascript" src="js/js.js"></script>
 </head>
 
 <body>
 <!--------------------------导航部分-------------------------->
-<div id="site-nav">
+<!--<div id="site-nav">
   <div class="life-top"></div>
   <div id="life-nav">
    <div class="sn-container">
@@ -152,7 +151,7 @@
     </ul>
    </div>
   </div>
-</div>
+</div>-->
 
 <!-----------------------------------------------Header------------------------------------------------->
 <div id="header">
@@ -177,7 +176,7 @@
                     </div>
                     <label for="mq" class="s-combobox-placeholder" style="color: rgb(102, 102, 102); visibility: visible;">Iphone 6 plus</label>
 				  </div>
-                  <button type="submit"><img src="images/sou.png" width="32" height="44"></button>
+                  <button type="submit"><img src="images/sou.png" width="50" height="44"></button>
                 </div>
               </fieldset>
             </form>
@@ -364,9 +363,6 @@
 </div>
 
 <!---------------------------底部代码块---------------------->
-<table cellpadding="0" cellspacing="0" width="100%">
-<tr>
-  <td>
 <div class="footer">
   <div id="footer">
     <div class="life-ensure">
@@ -427,8 +423,5 @@
     </div>
   </div>
 </div>
-  </td>
- </tr>
-</table>
 </body>
 </html>
