--- a/index.html
+++ b/index.html
@@ -180,6 +180,50 @@
   </div>
  </div>
 </div>
+<!-----导航搜索板块------->
+<div id="header">
+   <div class="headerLayout">
+     <div class="headerCon">
+        <div id="lifeLogo">
+          <a href="#"><img src="images/logo1.gif" width="295" height="109"/></a>
+        </div>
+        <div class="header-extra">
+          <div class="header-banner">
+            <a href="#"><img src="images/logo2.png" width="190" height="109" alt=""/></a>
+          </div>
+          <div id="lifeSearch" class="life-search">
+            <form class="lifeSearch-form" name="searchTop" action="#" target="_top" accept-charset="uft-8">
+              <fieldset>
+                <legend>精彩生活搜索</legend>
+                <div class="lifeSearch-input clearfix">
+                  <label for="mq" style="visibility: visible; display: none;">搜索 生活 商品/品牌</label>
+                  <div class="s-combobox" id="s-combobox-226">
+                    <div class="s-combobox-input-wrap">
+                       <input type="text" name="q" id="mq" tabindex="9" accesskey="s" autocomplete="off" autofocus="true" x-webkit-speech="" x-webkit-grammar="builtin:translate" class="s-combobox-input" role="combobox" aria-haspopup="true" title="请输入搜索文字" aria-label="请输入搜索文字">
+                    </div>
+                    <!--<label for="mq" class="s-combobox-placeholder" style="color: rgb(102, 102, 102); visibility: visible;">Iphone 6 plus</label>-->
+				  </div>
+                  <button type="submit"><img src="images/sou.png" width="32" height="44"></button>
+                </div>
+              </fieldset>
+            </form>
+            <ul class="hot-query">
+			  <li>热门搜索：</li>
+			  <li><a href="#">大码女装</a></li>
+              
+			  <li class="hot-query-highlight"><a href="#">雪地靴</a></li>
+			  <li><a href="#">羽绒衣</a></li>
+			  <li class="hot-query-highlight"><a href="#">秋冬童装</a></li>
+			  <li><a href="#">男鞋</a></li>
+			  <li><a href="#">时尚保温杯</a></li>
+			  <li class="hot-query-highlight"><a href="#">进口零食</a></li>
+			</ul>
+		  </div>
+		</div>
+     </div>
+   </div>
+</div>
+
 <!-----------------------------------------------------------------------导航结束------------------------------------------------------------------------------->
 
 
